<?xml version="1.0"?>
<package>
  <name>lima</name>
  <version>0.0.1</version>
  <description>
     lima - Library for Manipulation
  </description>

  <author email="mprats@willowgarage.com">Mario Prats</author>
  <maintainer email="mprats@willowgarage.com">Mario Prats</maintainer>

  <license>GPLv2</license>

  <url>http://ros.org/wiki/lima</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visp</build_depend>
  <build_depend>visp_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>visp</run_depend>
  <run_depend>visp_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>


